<resources>
    <string name="app_name">ShingueruApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shingueru_app">Shingueru App</string>
    <string name="delicioso_sabor_direto_na_sua_casa">sushi é</string>
    <string name="restaurante_shingueru">restaurante shingueru</string>
    <string name="entrar">Entrar</string>
    <string name="nome_completo">Nome completo</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="daily_meal">Promoções</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">Carrinho</string>
    <string name="_10_00_23_00">25mn</string>
    <string name="temaki_de_atum">Temaki de atum</string>
    <string name="_5_0">5.0</string>
    <string name="price">R$</string>
</resources>